objects/ASI_TH_CRM_OutletSubType__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_TH_CRM_OutletType__c</referenceTo>
        <relationshipLabel>Outlet Sub-Type</relationshipLabel>
        <relationshipName>Outlet_Sub_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outlet Sub-Type</label>
    <listViews>
        <fullName>ASI_CRM_TH_Outlet_Sub_Type</fullName>
        <columns>ASI_TH_CRM_Outlet_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_OutletSubType__c.ASI_TH_CRM_Outlet_Sub_type</value>
        </filters>
        <label>TH Outlet Sub-Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_TH_CRM_Outlet_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Code__c</columns>
        <columns>ASI_TH_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outlet Sub-Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Sub-Type</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Outlet_Sub_type</fullName>
        <active>true</active>
        <label>ASI TH CRM Outlet Sub-type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>